Images converted to webp

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
       <div class="introduction">
         <div class="introduction__img" id="mainpic">
-          <img src="img/minimaze.png" alt="decorative" />
+          <img src="img/Minimaze.webp" alt="decorative" />
           <div class="dot" id="dot"><img src="img/favicon.png" alt="" /></div>
         </div>
         <div class="introduction__text">
@@ -103,7 +103,7 @@
           <h2 class="download">Job Go Fish Cards</h2>
           <div class="pdf-class">
             <a href="docs/JobsGoFish.pdf">
-              <img src="img/JobsGoFish.png" alt="Jobs go fish cards"
+              <img src="img/JobsGoFish.webp" alt="Jobs go fish cards"
             /></a>
           </div>
         </div>
@@ -112,7 +112,7 @@
           <h2 class="download">Fortnite Fever Text Maze</h2>
           <div class="pdf-class">
             <a href="docs/FORTNITE FEVER.pdf">
-              <img src="img/FortniteFever.png" alt="Fortnite Text Maze"
+              <img src="img/FortniteFever.webp" alt="Fortnite Text Maze"
             /></a>
           </div>
         </div>
@@ -121,7 +121,7 @@
           <h2 class="download">Get a Job Game</h2>
           <div class="pdf-class">
             <a href="docs/JobBoardGame.pdf">
-              <img src="img/JobBoardGame.png" alt="Sports go fish cards"
+              <img src="img/JobsBoardGame.webp" alt="Sports go fish cards"
             /></a>
           </div>
         </div>
@@ -130,7 +130,7 @@
           <h2 class="download">Sports Dominoes</h2>
           <div class="pdf-class">
             <a href="docs/SportsDominoes.pdf">
-              <img src="img/SportsDominoes.jpg" alt="Sports dominoes"
+              <img src="img/SportsDominoes.webp" alt="Sports dominoes"
             /></a>
           </div>
         </div>
@@ -139,7 +139,7 @@
           <h2 class="download">Foods Go Fish Cards</h2>
           <div class="pdf-class">
             <a href="docs/FoodsGoFish.pdf">
-              <img src="img/FoodsGoFish.png" alt="Foods Go Fish Cards"
+              <img src="img/FoodsGoFish.webp" alt="Foods Go Fish Cards"
             /></a>
           </div>
         </div>
@@ -148,7 +148,7 @@
           <h2 class="download">Sports Go Fish Cards</h2>
           <div class="pdf-class">
             <a href="docs/SportsGoFish.pdf">
-              <img src="img/SportsGoFish.jpg" alt="Sports go fish cards"
+              <img src="img/SportsGoFish.webp" alt="Sports go fish cards"
             /></a>
           </div>
         </div>
@@ -157,7 +157,7 @@
           <h2 class="download">Pre-Int Jeopardy Game</h2>
           <div class="ppt-class">
             <a href="docs/PRE-INTERMILLIONAIRE.ppt">
-              <img src="img/preinterm.png" alt="PreIntermediate Powerpoint Game"
+              <img src="img/preinterm.webp" alt="PreIntermediate Powerpoint Game"
             /></a>
           </div>
         </div>
@@ -166,7 +166,7 @@
           <h2 class="download">Sports Board Game</h2>
           <div class="pdf-class">
             <a href="docs/SportsBoardGame.pdf">
-              <img src="img/SportsBoardGame.png" alt="Sports Board Game"
+              <img src="img/SportsBoardGame.webp" alt="Sports Board Game"
             /></a>
           </div>
         </div>
@@ -176,7 +176,7 @@
           <div class="pdf-class">
             <a href="docs/AnimalsGoFish.pdf">
               <img
-                src="img/AnimalsGoFish.png"
+                src="img/AnimalGoFish.webp"
                 alt="Animals go fish cards"
             /></a>
           </div>
@@ -198,7 +198,7 @@
           <div class="pdf-class">
             <a href="docs/FrequencyAdverbsTextMaze.pdf">
               <img
-                src="img/FrequencyAdverbsTextMaze.jpg"
+                src="img/FrequencyAdverbsTextMaze.webp"
                 alt="Adverbs text maze"
             /></a>
           </div>
@@ -208,7 +208,7 @@
           <h2 class="download">Past Simple Text Maze</h2>
           <div class="pdf-class">
             <a href="docs/PastSimpleTextMaze.pdf">
-              <img src="img/PastSimpleTextMaze.jpg" alt="Past simple text maze"
+              <img src="img/PastSimpleTextMaze.webp" alt="Past simple text maze"
             /></a>
           </div>
         </div>
@@ -217,7 +217,7 @@
           <h2 class="download">Present Tenses Text Maze</h2>
           <div class="pdf-class">
             <a href="docs/PSimpleContinuous.pdf">
-              <img src="img/PSimpleContinuous.jpg" alt="Present Temses text maze"
+              <img src="img/PSimpleContinuous.webp" alt="Present Temses text maze"
             /></a>
           </div>
         </div>
@@ -226,7 +226,7 @@
           <h2 class="download">Clothes Text Maze</h2>
           <div class="pdf-class">
             <a href="docs/ClothesTextMaze.pdf">
-              <img src="img/ClothesTextMaze.jpg" alt="clothes text maze"
+              <img src="img/ClothesTextMaze.webp" alt="clothes text maze"
             /></a>
           </div>
         </div>
@@ -235,7 +235,7 @@
           <h2 class="download">Vehicles Text Maze</h2>
           <div class="pdf-class">
             <a href="docs/VehiclesTextMaze.pdf">
-              <img src="img/VehiclesTextMaze.jpg" alt="vehicles text maze"
+              <img src="img/VehiclesTextMaze.webp" alt="vehicles text maze"
             /></a>
           </div>
         </div>
@@ -244,7 +244,7 @@
           <h2 class="download">Christmas Text Maze</h2>
           <div class="pdf-class">
             <a href="docs/ChristmasTextMaze.pdf">
-              <img src="img/ChristmasTextMaze.jpg" alt="Christmas text maze"
+              <img src="img/ChristmasTextMaze.webp" alt="Christmas text maze"
             /></a>
           </div>
         </div>
@@ -253,7 +253,7 @@
           <h2 class="download">Vehicles Word Search</h2>
           <div class="pdf-class item3">
             <a href="docs/VehiclesWordSearch.pdf">
-              <img src="img/VehiclesWordsearch.jpg" alt="Vehicles word search"
+              <img src="img/VehiclesWordSearch.webp" alt="Vehicles word search"
             /></a>
           </div>
         </div>
@@ -262,7 +262,7 @@
           <h2 class="download">Halloween Board Game</h2>
           <div class="pdf-class">
             <a href="docs/HalloweenBoardGame.pdf">
-              <img src="img/HalloweenBoardGame.jpg" alt="Halloween Board Game"
+              <img src="img/HalloweenBoardGame.webp" alt="Halloween Board Game"
             /></a>
           </div>
         </div>
@@ -271,7 +271,7 @@
           <h2 class="download">Halloween Dominoes</h2>
           <div class="pdf-class">
             <a href="docs/HalloweenDominoesPrintable.pdf">
-              <img src="img/HalloweenDominoes.jpg" alt="Halloween dominoes"
+              <img src="img/HalloweenDominoes.webp" alt="Halloween dominoes"
             /></a>
           </div>
         </div>
@@ -282,13 +282,13 @@
         <div class="links__images">
           <div class="links__images-1 figure">
             <a href="flashcards-animals.html">
-              <img src="img/FlashcardAnimalpic.jpg" alt=""
+              <img src="img/FlashcardAnimalpic.webp" alt=""
             /></a>
             <figcaption>Animal Photo Flashcards</figcaption>
           </div>
           <div class="links__images-1 figure">
             <a href="bingo-animals.html">
-              <img src="img/AnimalBING.jpg" alt=""
+              <img src="img/AnimalBING.webp" alt=""
             /></a>
             <figcaption>Printable Bingo Games</figcaption>
           </div>
