More ads, more general CSS

--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
     <title>Esl-ology Printables</title>
     <link rel="icon" type="image/png" href="favicon.png" ; />
     <link rel="stylesheet" href="./css/styles.css" />
-    <script
-      data-ad-client="ca-pub-6192312197226967"
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
-    ></script>
+
+       <script data-ad-client="ca-pub-6192312197226967" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6192312197226967"
+     crossorigin="anonymous"></script>
     <script src="csi.min.js"></script>
   </head>
   <body>
@@ -54,18 +53,18 @@
     </div>
 
     <div id="wrapper" class="wrapper">
-    <div class="sense">
-    </style>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXX11XXX9" crossorigin="anonymous"></script>
-    <!-- mainpage_top -->
-    <ins class="adsbygoogle mainpage_top"
-         style="display:inline-block"
-         data-ad-client="ca-pub-6192312197226967"
-         data-ad-slot="3393588944"></ins>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-    </div>
+ <div class="sense">
+ </style>
+ <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXX11XXX9" crossorigin="anonymous"></script>
+ <!-- mainpage_top -->
+ <ins class="adsbygoogle mainpage_top"
+      style="display:inline-block"
+      data-ad-client="ca-pub-6192312197226967"
+      data-ad-slot="3393588944"></ins>
+ <script>
+ (adsbygoogle = window.adsbygoogle || []).push({});
+ </script>
+ </div>
 
       <div class="sidebar-container" id="sidebar">
         <div data-include="sidebar.html"></div>
@@ -149,6 +148,7 @@
           </div>
         </div>
 
+
         <div class="item ppt">
           <h2 class="download">Pre-Int Jeopardy Game</h2>
           <div class="ppt-class">
@@ -176,6 +176,20 @@
                 alt="Animals go fish cards"
             /></a>
           </div>
+        </div>
+
+
+        <div class="sensegen">
+        </style>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXX11XXX9" crossorigin="anonymous"></script>
+        <!-- mainpage_top -->
+        <ins class="adsbygoogle mainpage_top"
+             style="display:inline-block"
+             data-ad-client="ca-pub-6192312197226967"
+             data-ad-slot="3393588944"></ins>
+        <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
         </div>
 
         <div class="item item">
@@ -261,6 +275,19 @@
               <img src="img/HalloweenBoardGame.webp" alt="Halloween Board Game"
             /></a>
           </div>
+        </div>
+
+        <div class="sensegen">
+        </style>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXX11XXX9" crossorigin="anonymous"></script>
+        <!-- mainpage_top -->
+        <ins class="adsbygoogle mainpage_top"
+             style="display:inline-block"
+             data-ad-client="ca-pub-6192312197226967"
+             data-ad-slot="3393588944"></ins>
+        <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
         </div>
 
         <div class="item">
