--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           viewBox="0 0 100 80"
           width="40"
           height="20"
-          onclick="toggler();"
+          onclick="toggler()"
           id="menu"
           class="menu"
         >
@@ -317,7 +317,7 @@
           </div>
         </div>
       </div>
-
+    </div>
      
  
     <footer class="footer">
