--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           viewBox="0 0 100 80"
           width="40"
           height="20"
-          onclick="toggler()"
+          onclick="toggler();"
           id="menu"
           class="menu"
         >
@@ -55,7 +55,7 @@
     <div id="wrapper" class="wrapper">
  <div class="sense">
  </style>
- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXX11XXX9" crossorigin="anonymous"></script>
+ <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6192312197226967" crossorigin="anonymous"></script>
  <!-- mainpage_top -->
  <ins class="adsbygoogle mainpage_top"
       style="display:inline-block"
@@ -181,7 +181,7 @@
 
         <div class="sensegen">
         </style>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXX11XXX9" crossorigin="anonymous"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6192312197226967" crossorigin="anonymous"></script>
         <!-- mainpage_top -->
         <ins class="adsbygoogle mainpage_top"
              style="display:inline-block"
@@ -279,7 +279,7 @@
 
         <div class="sensegen">
         </style>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXX11XXX9" crossorigin="anonymous"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6192312197226967" crossorigin="anonymous"></script>
         <!-- mainpage_top -->
         <ins class="adsbygoogle mainpage_top"
              style="display:inline-block"
